# rust-facilitator

./: .dockerignore  .gitignore  API_QUICK_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  READY_FOR_GITHUB.md  docker-compose.yml  env.example
demo/: README.md  client.js  package.json  performance-demo.js  run-demo.sh  server.js  stress-test.js
examples/ffi/python/: README.md  x402_ffi.py
examples/wasm/: README.md  index.html
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml.template  service.yaml
scripts/: benchmark_basic.sh  benchmark_memory_final.sh  benchmark_parallel.sh  benchmark_parallel_final.sh  build-wasm.sh  compare_rust_vs_typescript.sh  generate_keypair.sh  performance_comparison.sh  run_comparative_benchmark.sh  run_load_test.sh  test_batch_simple.sh  test_endpoints.sh  test_settle_mock.sh  test_verify_mock.sh
src/: audit.rs  cache.rs  config.rs  dedup.rs  error.rs  ffi.rs  lib.rs  main.rs  metrics.rs  parallel.rs  server.rs  wasm.rs  webhooks.rs
src/handlers/: admin.rs  batch.rs  health.rs  mod.rs  settle.rs  supported.rs  verify.rs
src/middleware/: mod.rs  rate_limit.rs  request_id.rs
src/solana/: client.rs  decoder.rs  mod.rs  signer.rs  submitter.rs  verifier.rs  verifier_tests.rs
src/types/: requests.rs  responses.rs
tests/: cache_test.rs  comparative_benchmark.js  comprehensive_load_test.js  integration_test.rs  load_test.js  memory_leak_test.js  metrics_test.rs  security_test.rs  simple_benchmark.js  verify_benchmark.js
